fix harf footer spacing issues

--- a/src/harf-src/src/App.scss
+++ b/src/harf-src/src/App.scss
@@ -85,7 +85,7 @@
 
 @media screen and (max-width: 500px) {
     #catalog-footer-space {
-        height: 47vw;
+        height: 8.875rem;
     }
 
     #sample-footer-space {
